--- a/templates/additem.html
+++ b/templates/additem.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-	<p class="title">{{title}}</p>
+	<p class="title">{{page_title}}</p>
 
 	<span class="error">{{error}}</span>
 
