--- a/templates/viewitem.html
+++ b/templates/viewitem.html
@@ -16,11 +16,11 @@
 		<tr>
 			<td colspan="2">
 				<div class="fontawesome-pencil active catalog-icon-inline" 
-					onclick="location.href='{{url_for('editItem', category=category, item=item)}}'"></div>
+					onclick="location.href='{{url_for('editItem', category=category, item=item)}}'" alt="Edit"></div>
 				<div class="fontawesome-trash active catalog-icon-inline" 
-					onclick="location.href='{{url_for('deleteItem', category=category, item=item)}}'"></div>
+					onclick="location.href='{{url_for('deleteItem', category=category, item=item)}}'" alt="Delete"></div>
 				<div class="fontawesome-home active catalog-icon-inline" 
-					onclick="location.href='{{url_for('listCatalogsAndLatestItems')}}'"></div>
+					onclick="location.href='{{url_for('listCatalogsAndLatestItems')}}'" alt="Home"></div>
 			</td>
 		</tr>
 	</table>
