--- a/templates/deletecategory.html
+++ b/templates/deletecategory.html
@@ -1,13 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
 
-	<p class="title">{{title}}</p>
+	<p class="title">{{page_title}}</p>
 	
 	<h3> Are you sure you want to delete '{{category}}' category? </h3>
 
 	<form action="#" method = "post">
-		<input type="submit" value="Submit">
-		<input type="button" value="Cancel" onClick="window.location='{{url_for('listCatalogsAndLatestItems')}}';" />
+		<table class="form-table">
+			<tr>
+				<td colspan="2">
+					<input type="submit" value="Submit">
+					<input type="button" value="Cancel" onClick="window.location='{{url_for('listCatalogsAndLatestItems')}}';">
+				<td>
+			</tr>
+		</table>
 	</form>
 
 {% endblock %}
