--- a/templates/main.html
+++ b/templates/main.html
@@ -1,17 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
 
-	<div class = 'flash'>
-		{% with messages = get_flashed_messages() %}
+	{% with messages = get_flashed_messages() %}
       		{% if messages %}
-        		<ul>
-        		{% for message in messages %}
-            		<li> <strong> {{ message }} </strong> </li>
-        		{% endfor %}
-        		</ul>
-        	{% endif %}
-    	{% endwith %}
-	</div>
+				<div class="alert alert-warning alert-dismissible" role="alert">
+			  		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			  			<span aria-hidden="true">&times;</span>
+			  		</button>
+			  		
+					<ul>
+					{% for message in messages %}
+			    		<li> <strong> {{ message }} </strong> </li>
+					{% endfor %}
+					</ul>	
+				</div>
+		{% endif %}
+    {% endwith %}
+
 
 	<div class="table-responsive no-border">
 		<table class="table">
