--- a/templates/base.html
+++ b/templates/base.html
@@ -2,21 +2,31 @@
 <html lang="en">
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
-		<!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">-->
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 
+
+		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='font-awesome-4.6.3/css/font-awesome.min.css') }}">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  		{% block morescripts %}
+  		{% endblock %}
 	</head>
 	<body class="body-class">
 		<div class="banner">
 			<div class="banner-title">
 				<h3>Catalog App</h3>
 			</div>
+			{% block loginbutton %}
 			<div class="banner-login">
-				<button type = "button" class = "btn btn-primary pull-right">Login</button>
+			{% if 'username' not in session %}
+				<button type = "button" class = "btn btn-primary pull-right" onclick="location.href='{{url_for('showLogin')}}'">Login</button>
+			{% else %}
+				<button type = "button" class = "btn btn-primary pull-right" onclick="location.href='{{url_for('disconnect')}}'">Logout</button>
+			{% endif %}
+			
 			</div>
+			{% endblock %}
 		</div>
 		
 		<div class="content-background">
