Refactoring models and auths

--- a/templates/editcategory.html
+++ b/templates/editcategory.html
@@ -10,7 +10,7 @@
 			<tr>
 				<td>Name:</td>
 				<td>
-					<input type="text" class="form-control" maxlength="100" name="name" value={{name}}>
+					<input type="text" class="form-control" maxlength="100" name="name" value="{{name|safe}}">
 				</td>
 			</tr>
 			<tr>
