Applied code review suggestions

--- a/templates/deletecategory.html
+++ b/templates/deletecategory.html
@@ -9,6 +9,7 @@
 		<table class="form-table">
 			<tr>
 				<td colspan="2">
+					<input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 					<input type="submit" value="Submit">
 					<input type="button" value="Cancel" onClick="window.location='{{url_for('listCatalogsAndLatestItems')}}';">
 				<td>
