--- a/templates/editcategory.html
+++ b/templates/editcategory.html
@@ -15,6 +15,7 @@
 			</tr>
 			<tr>
 				<td colspan="2">
+					<input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 					<input type="hidden" name="category_id" value="{{category_id}}">
 					<input type="submit" value="Submit">
 					<input type="button" value="Cancel" onClick="window.location='{{url_for('listCatalogsAndLatestItems')}}';">
