--- a/templates/edititem.html
+++ b/templates/edititem.html
@@ -34,6 +34,7 @@
 			</tr>
 			<tr>
 				<td colspan="2">
+					<input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
 					<input type="hidden" name="item_id" value="{{item_id}}">
 					<input type="submit" value="Submit">
 					<input type="button" value="Cancel" onClick="window.location='{{url_for('listCatalogsAndLatestItems')}}';">
